# short-form-harness

./: .env.example  .gitignore  Brewfile  LICENSE  README.md  analysis.md  cli.py  pyproject.toml  requirements.txt  retro.md  style_profile.schema.json
assets/music/: index.json
profiles/: biodance.json  ref1.json
prompts/: analyze_vision.md  gate_judge.md  hook_gen.md
src/: __init__.py
src/analyze/: __init__.py  audio_stats.py  cut_detect.py  probe.py  synthesize_profile.py  vision.py
src/common/: __init__.py  config.py  exceptions.py  io.py  vendor_client.py
src/generate/: __init__.py  assets.py  brief.py  compose.py  gate.py  hook_gen.py  plan.py
tests/: __init__.py  test_assets.py  test_audio_stats.py  test_brief.py  test_compose.py  test_cut_detect.py  test_gate.py  test_hook_gen.py  test_integration.py  test_io.py  test_isolation.py  test_plan.py  test_probe.py  test_reusability.py  test_synthesize_profile.py  test_vendor_client.py  test_vision.py
